<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#383631"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingStart="60dp"
        android:paddingTop="70dp"
        android:paddingEnd="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/message" />

                <EditText
                    android:maxLength="50"
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#d9e5f3"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/usrusr" />

                <EditText
                    android:maxLength="40"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:hint="@string/full_name_hinta"
                    android:inputType="textPersonName"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#d9e5f3"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/usrusr" />

                <EditText
                    android:maxLength="40"
                    android:id="@+id/username_u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#d9e5f3"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pswd" />

                <EditText
                    android:maxLength="40"
                    android:id="@+id/password_u"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#d9e5f3"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:textAlignment="viewStart"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/phonemob" />

                <EditText
                    android:maxLength="10"
                    android:id="@+id/mobphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="#00000000"
                    android:hint="@string/mobile_number_hintar"
                    android:inputType="phone"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#d9e5f3"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4a5a71" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/sup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:background="#65A147"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:onClick="onsave"
            android:padding="16dp"
            android:text="@string/sigup"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/i_have_acount"
            android:textColor="#d9e5f3"
            android:letterSpacing="0.1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="400dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:backgroundTint="#F4FFEE"
            android:background="@drawable/circular_shape"
            android:padding="10dp"/>
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:lottie_rawRes="@raw/circle_loader"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
</RelativeLayout>
