<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:background="#FFE"
    android:fitsSystemWindows="true"
    android:layoutDirection="rtl"> <!-- دعم RTL -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:id="@+id/amazonName"
            android:text="    Linabni"
            android:textSize="32sp"
            android:textColor="@color/teal_700"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"
            android:fontFamily="@font/acro"/> <!-- الخط المخصص -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/amazonDesc"
            android:text="         sudan"
            android:textSize="25sp"
            android:layout_marginStart="18dp"
            android:textColor="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonName"
            app:layout_constraintEnd_toStartOf="@+id/amazonImage"
            android:fontFamily="@font/acro"/> <!-- الخط المخصص -->

        <ImageView
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:id="@+id/amazonImage"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/amazonName"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amazonImage">

            <!-- CardView 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/clothingCard"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/Educt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/grdnt">

                    <TextView
                        android:id="@+id/clothingName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/clothingImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/educationar"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="@font/acro"/> <!-- الخط المخصص -->

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/clothingImage"
                        android:src="@drawable/logo"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/Helth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/grdnt">

                    <TextView
                        android:id="@+id/elecName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/elecImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/healthar"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="@font/acro"/> <!-- الخط المخصص -->

                    <ImageView
                        android:id="@+id/elecImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/logo"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <!-- CardView 3 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/E_W"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/grdnt">

                    <TextView
                        android:id="@+id/homeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/homeImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/utilitiesar"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:fontFamily="@font/acro"/> <!-- الخط المخصص -->

                    <ImageView
                        android:id="@+id/homeImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/logo"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView 4 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/Scur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/grdnt">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beautyName"
                        android:text="@string/securityar"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/beautyImage"
                        android:fontFamily="@font/acro"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/beautyImage"
                        android:src="@drawable/logo"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">

            <!-- CardView 5 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/Org"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/grdnt">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pharmName"
                        android:text="@string/organizationsar"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/pharmImage"
                        android:fontFamily="@font/acro"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/pharmImage"
                        android:src="@drawable/logo"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView 6 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:id="@+id/Another"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/grdnt">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/grocName"
                        android:text="@string/other_servicesar"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/grocImage"
                        android:fontFamily="@font/acro"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/grocImage"
                        android:src="@drawable/logo"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/row3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exit"
                android:text="@string/exitar"
                android:backgroundTint="@color/cardview_dark_background"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/acro"/>
            <View
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />


        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


